# TimeVQVAE

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  custom_dataset_sampling.ipynb  environment.yml  evaluate.py  pyproject.toml  requirements.txt  run_CAS.py  simple_sampling.ipynb  stage1.py  stage12_all_ucr.py  stage2.py  stage3.py  stage_fid_enhancer.py  stage_neural_mapper.py
.agents/skills/gitnexus-refresh-on-stale/: SKILL.md
.agents/skills/uv-pypi-publish/: SKILL.md
.docker/: Dockerfile
.google_colab/: TimeVQVAE (generation only).ipynb
configs/: config.yaml  config_cas.yaml
datasets/: DataSummary_UCR.csv
encoder_decoders/: vq_vae_encdec.py  vq_vae_encdec1d.py
evaluation/: README.md  cas.py  evaluation.py  metrics.py  rocket_functions.py  stat_metrics.py
experiments/: __init__.py  exp_base.py  exp_domain_shifter.py  exp_fidelity_enhancer.py  exp_maskgit.py  exp_neural_mapper.py  exp_stage1.py  exp_stage2.py  exp_vq_vae.py
generators/: bidirectional_transformer.py  domain_shifter.py  fidelity_enhancer.py  maskgit.py  neural_mapper.py  sample.py
google_colab/: TimeVQVAE (generation only).ipynb
preprocessing/: data_pipeline.py  preprocess_ucr.py
results/: CAS; full results.csv  FID; full results.csv  IS; full results.csv
src/timevqvae/: __init__.py  evaluate.py  maskgit.py  run_CAS.py  stage1.py  stage2.py  stage_neural_mapper.py  vqvae.py
src/timevqvae/utils/: cli.py  (+12 more)
tests/: conftest.py
tests/timevqvae/: test_maskgit.py  test_vqvae.py
utils/: __init__.py  cd_diagram.py  evaluation.py
vector_quantization/: __init__.py  vq.py
(+30 files in other folders)
